# airflow-aws-emr-auto

./: README.md  pyproject.toml
src/main/: auto_emr.py
